// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allOf operator support renders simple allOf 1`] = `
"<div class="openapi">

# allOf

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "type": "string",
    "foo": "string",
    "name": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 type 
|
 string 
|
 
 
||

||
 foo 
|
 string 
|
 
 
||

||
 name 
|
 string 
|
 
 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "type": "string",
    "baz": "string"
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 name 
|
 string 
|
 <span style="color:gray;">Default</span>: \`a\` 
||

||
 type 
|
 string 
|
 
 
||

||
 baz 
|
 string 
|
 
 
|||#

</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;

exports[`allOf operator support renders single allOf 1`] = `
"<div class="openapi">

# allOf

## Request

<div class="openapi__requests">

<div class="openapi__request__wrapper" style="--method: var(--dc-openapi-methods-post);margin-bottom: 12px">

<div class="openapi__request">

POST {.openapi__method} 
\`\`\`
http://localhost:8080/test
\`\`\`



</div>

Generated server url

</div>

</div>

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "pet": {
        "type": "string",
        "foo": "string"
    }
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 pet 
|
 [Cat](#cat) 
|
 Cat class
 
|||#

</div>

<div class="openapi-entity">

### Cat

Cat class

#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 type 
|
 string 
|
 
 
||

||
 foo 
|
 string 
|
 
 
|||#

</div>

## Responses

<div class="openapi__response__code__200">

## 200 OK

Base 200 response

<div class="openapi-entity">

### Body

{% cut "application/json" %}


\`\`\`json
{
    "pet": {
        "type": "string",
        "foo": "string"
    }
}
\`\`\`


{% endcut %}


#|||
 **Name** 
|
 **Type** 
|
 **Description** 
||

||
 pet 
|
 [Cat](#cat) 
|
 Cat class
 
|||#

</div>

</div>
<!-- markdownlint-disable-file -->

</div>"
`;
